# ridelogger-mcp

./: .env.example  .gitignore  README.md  chatgpt-app-submission.json  pyproject.toml
.cursor/rules/: deploy.mdc  version-bump.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FEATURES.md
src/ridelogger_mcp/: __init__.py  __main__.py  api_client.py  app.py  auth_provider.py  bearer_auth.py  config.py  errors.py  file_inputs.py  logging_setup.py  reference_cache.py  reference_paths.py  resources.py  state.py  tool_semantics.py
src/ridelogger_mcp/tools/: __init__.py  auth.py  charge_logs.py  common.py  expense_logs.py  fuel_logs.py  images.py  plates.py  reference.py  reminders.py  service_logs.py  user.py  vehicle_cabinet.py  vehicle_logs.py  vehicles.py
tests/: __init__.py  test_agri_vehicle_types_mcp.py  test_api_consumer_signing.py  test_chatgpt_file_inputs.py  test_logs_list_query_params.py  test_openai_apps_challenge.py  test_reference_cache_paths.py  test_response_sanitization.py  test_tool_annotations.py  test_tool_dispatch_upstream.py
