[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ridelogger-mcp"
version = "0.1.4"
description = "HTTP MCP server — thin wrapper over RideLogger API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0",
  "httpx>=0.27",
  "pydantic>=2",
  "pydantic-settings>=2",
  "tenacity>=8.2",
]

[project.scripts]
ridelogger-mcp = "ridelogger_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
